신규 rust 프로젝트 추가에 따른 설정 변경

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,9 +20,8 @@
             "description": "Select the Rust project",
             "options": [
                 "hello",
-                "test1",
-                "test2",
-                "test3"
+                "server",
+                "client"
             ]
         }
     ]
