--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,9 +37,8 @@
             "description": "Select the Rust project to build and run",
             "options": [
                 "hello",
-                "test1",
-                "test2",
-                "test3"
+                "server",
+                "client"
             ]
         }
     ]
